Refactor: Update `SonyHomeBadger` to use `List.of` instead of `Arrays.asList`